[gd_scene load_steps=17 format=2]

[ext_resource path="res://Background/bg4.png" type="Texture" id=1]
[ext_resource path="res://PlayerAssets/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Background/bg2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Scenes/BaseScene2.gd" type="Script" id=5]
[ext_resource path="res://Background/mon.png" type="Texture" id=6]
[ext_resource path="res://Background/bg1.png" type="Texture" id=7]
[ext_resource path="res://Background/bg3.png" type="Texture" id=10]
[ext_resource path="res://CreeperPixelRegular-DMYx.ttf" type="DynamicFontData" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 668.63, 47.0815 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.3519, 294.946 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.8409, 10 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 29.2506, 10.5447 )

[sub_resource type="DynamicFont" id=8]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="BaseScene2Control" type="Node2D"]
script = ExtResource( 5 )

[node name="Background4" type="Sprite" parent="."]
visible = false
position = Vector2( 284.052, 79.37 )
scale = Vector2( 0.71271, 0.71271 )
texture = ExtResource( 1 )

[node name="Background3" type="Sprite" parent="."]
visible = false
position = Vector2( 296.958, 101.251 )
scale = Vector2( 0.622297, 0.622297 )
texture = ExtResource( 10 )

[node name="mon" type="Sprite" parent="Background3"]
position = Vector2( -246.386, -24.4431 )
scale = Vector2( 1.0281, 1.0281 )
texture = ExtResource( 6 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 316.504, 96.5085 )
scale = Vector2( 0.658665, 0.59726 )
texture = ExtResource( 3 )

[node name="Background1" type="Sprite" parent="."]
visible = false
position = Vector2( 312.255, 92.883 )
scale = Vector2( 0.736893, 0.668195 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Bounds" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 328.403, 236.973 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 609.335, 126.489 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -29.7511, 112.105 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 396.026, 177.304 )
current = true
script = ExtResource( 4 )

[node name="Limits" type="Node" parent="Camera2D"]

[node name="TopLeft" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( 27.4396, -2.06926 )

[node name="BottomRight" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( 618.523, 192.365 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 493.0
margin_bottom = 242.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 121.838
margin_top = 83.6975
margin_right = 194.838
margin_bottom = 111.697
custom_fonts/font = SubResource( 4 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choice 1"]
position = Vector2( 188.988, 186.468 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="Choice 1"]
margin_left = 173.489
margin_top = 180.3
margin_right = 238.489
margin_bottom = 202.3
custom_fonts/font = SubResource( 6 )
text = "YOUR NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice 2" type="Area2D" parent="."]
position = Vector2( 0, 1.25992 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choice 2"]
position = Vector2( 307.421, 187.098 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="Choice 2"]
margin_left = 286.632
margin_top = 178.909
margin_right = 326.632
margin_bottom = 192.909
custom_fonts/font = SubResource( 8 )
text = "MY NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Choice 1" to="." method="_on_Choice_1_body_entered"]
[connection signal="body_exited" from="Choice 1" to="." method="_on_Choice_1_body_exited"]
[connection signal="body_entered" from="Choice 2" to="." method="_on_Choice_2_body_entered"]
[connection signal="body_exited" from="Choice 2" to="." method="_on_Choice_2_body_exited"]
